Fix Firefox table layout issues.

--- a/app/assets/stylesheets/base/_tables.css.scss
+++ b/app/assets/stylesheets/base/_tables.css.scss
@@ -10,7 +10,8 @@ table {
   }
 
   td, th {
-    padding: 1.2em;
+    padding: 0 13px;
+    height: 56px;
     text-align: left;
     border: 0;
   }
@@ -24,7 +25,7 @@ div.table-wrapper {
     &#invitees {
       position: absolute;
       left: 0;
-      top: 5em;
+      top: 75px;
       background: #fff;
       width: $table-width-mobile;
       overflow: hidden;
@@ -92,11 +93,12 @@ div.table-wrapper {
           @include background-image(linear-gradient(#fff, darken($bg-color, 2%)));
           border-bottom: 1px solid darken($bg-color, 20%);
           border-right:1px solid darken($bg-color, 20%);
-          height: 2.6em;
           text-shadow: 0 1px 0 #fff;
           font-family: $bariol;
-          line-height: 1.3em;
           text-align: center;
+          padding: 0 17px;
+          @include box-sizing(border-box);
+          height: 74px;
 
           &:last-child {
             border-right: 0;
@@ -127,10 +129,10 @@ div.table-wrapper {
                     @include box-shadow(none);
                     @include border-radius(0);
                     border: 0;
-                    height: 3.45em;
+                    height: 56px;
                     text-indent: -9999px;
                     overflow: hidden;
-                    @include transition(none);
+                    @include transition(background-color 0.2s);
 
                     &.vote {
                       background: rgba(231, 244, 247, 0.3);
@@ -141,11 +143,11 @@ div.table-wrapper {
                     }
 
                     &.unvote {
-                      background-size: 32px;
-                      background: darken($success, 25%);
+                      background: desaturate(darken($success, 40%), 20%);
                       background-image: url('/images/checkmark.png');
-                      background-repeat: no-repeat;
                       background-position: center 10px;
+                      background-repeat: no-repeat;
+                      background-size: 32px;
                     }
                   }
                 }
@@ -161,6 +163,7 @@ div.table-wrapper {
                         background-image: url('/images/checkmark.png');
                         background-repeat: no-repeat;
                         background-position: center 10px;
+                        background-size: 32px;
                       }
 
                       &.unvote {
@@ -169,6 +172,7 @@ div.table-wrapper {
                         @include box-shadow(inset 0 1px 2px darken($orange, 10%));
                         background-repeat: no-repeat;
                         background-position: center 12px;
+                        background-size: 32px;
                       }
                     }
                   }
@@ -180,7 +184,7 @@ div.table-wrapper {
 
         td {
           padding: 0;
-          height: 3.45em;
+          height: 56px;
 
           &.voted, &:nth-child(even).voted {
             background: darken($success, 25%);
